 cnp-pci-dss-1.3.3-ingress-pggo5nc.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-pci-dss-1.3.3-ingress-dtptpgw
  namespace: default
spec:
  description: "This policy will allow the inbound connection"
  endpointSelector:
    matchLabels:
      release: jupyter-hub
      app: jupyterhub
      component: continuous-image-puller
      controller-revision-hash: 56bc99b8f5
      pod-template-generation: 1
  ingress:
    - fromEntities:
        - cluster
    - fromCIDRSet:
        - cidr: 10.10.10.1/16  #change with your id address
